# israel-weather-mcp-agent

./: HOST_TOOL_FLOW_VISUAL.html  PROJECT_SPEC_FLOW_SIMULATOR.html  README.md  SPEC_WEATHER_ISRAEL_MCP.md  host.py  pyproject.toml  weather_Israel.py
