[project]
name = "weather-israel-mcp-agent"
version = "0.1.0"
description = "MCP weather agent for Israel using Playwright browser automation"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "openai>=1.0.0",
    "mcp>=1.27.0",
    "python-dotenv>=1.2.2",
    "playwright>=1.44.0",
]
